--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <body>
         <h1 id="title"><a href="About.html">About</a></button><button><a href="purchase.html">How to Purchase</a></button>
 <h3>Text today at +1 (984) 225-1821 to discuss services.</h3>
-     
+     window.location.hash = "Home";
     </body>
 </html>
